--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.26",
+    "postcss-cli": "^7.1.0",
     "postcss-load-config": "^2.1.0",
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.0.2",
