--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,20 +1,8 @@
 {
   "background_color": "#ffffff",
   "theme_color": "#333333",
-  "name": "Vannsl - Portfolio of Vanessa Böhner",
+  "name": "Vannsl - Web Developer",
   "short_name": "Vannsl",
   "display": "minimal-ui",
-  "start_url": "/",
-  "icons": [
-    {
-      "src": "logo-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "logo-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "start_url": "/"
 }
