--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
-    "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
-    "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css",
+    "dev:tailwind": "postcss static/tailwind.css -o static/main.css -w",
+    "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/main.css",
     "build": "npm run build:tailwind && sapper build --legacy",
     "export": "npm run build:tailwind && sapper export --legacy",
     "start": "node __sapper__/build",
